kubernetes/backend.yaml

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: vidal-guillot
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
