kubernetes/frontend.yaml

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: vidal-guillot
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
