kubernetes/rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: vidal-guillot
spec:
  selector:
    app: rabbitmq
  ports:
    - name: rabbitmqapi
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
